--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+*{
+  box-sizing:border-box;
+}
+
 body {
   margin: 0;
   font-family: 'Lato', sans-serif;
@@ -9,3 +13,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+a{
+  text-decoration: none;
+  color: black;
+}
+
