--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,9 @@ body {
   font-family: 'Lato', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: url("./assets/background.JPG"), ;
+  background-size: cover;
+  opacity: 0.9;
 }
 
 code {
