..Redux Saga start

--- a/src/components/spinner/spinner.styles.scss
+++ b/src/components/spinner/spinner.styles.scss
@@ -19,7 +19,7 @@
         -webkit-transform:rotate(360deg) ;
      }   
     }
-    @-weblit-keyframes spin{
+    @keyframes spin{
         to{
             -webkit-transform:rotate(360deg) ;
         }
