--- a/src/components/Input/styles.scss
+++ b/src/components/Input/styles.scss
@@ -1,45 +1,49 @@
-$sub-color: grey;
-$main-color: black;
+/* global variables */
+$sub-color: #808080;
+$main-color: #000000;
 
 @mixin shrinkLabel {
-  top: -14px;
-  font-size: 12px;
+  top: -12px;
+  font-size: 0.75rem;
   color: $main-color;
 }
 
-.group {
+.input {
   position: relative;
-  margin: 45px 0;
+  margin-top: 48px;
+  margin-bottom: 48px;
 
-  .form-input {
+  .inputFeild {
+    border: none;
+    outline: none;
     background: none;
-    background-color: white;
+    background-color: #fff;
     color: $sub-color;
-    font-size: 18px;
-    padding: 10px 10px 10px 5px;
+    font-size: 1.25rem;
+    padding: 10px;
     display: block;
     width: 100%;
-    border: none;
     border-radius: 0;
     border-bottom: 1px solid $sub-color;
-    margin: 25px 0;
+    margin-top: 24px;
+    margin-bottom: 24px;
 
     &:focus {
       outline: none;
     }
 
-    &:focus ~ .form-input-label {
+    &:focus ~ .label {
       @include shrinkLabel();
     }
   }
 
   input[type='password'] {
-    letter-spacing: 0.3em;
+    letter-spacing: 1px;
   }
 
-  .form-input-label {
+  .label {
     color: $sub-color;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: normal;
     position: absolute;
     pointer-events: none;
